新增jmh支持 反射,MethodHandle基准测试 去除包含预览特性的switch,jmh报错