@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "me.champeau.jmh" version "0.6.6"
 }
 
 group 'com.techzealot'
@@ -25,6 +26,14 @@ java {
     }
     modularity.inferModulePath = true
 }
+
+jmh {
+    warmupIterations = 2
+    iterations = 1
+    fork = 1
+    jvmArgsPrepend=['--enable-preview']
+}
+
 
 //enable preview features
 tasks.withType(JavaCompile) {
